<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_audio</name>
  <version>0.1.0</version>
  <description>Audio mixing and conversion utilities for the Bob ROS 2 system.</description>
  <maintainer email="bobmeuchelm@gmail.com">Bob Ros</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/bob-ros2/bob_audio</url>
  <url type="repository">https://github.com/bob-ros2/bob_audio</url>
  <url type="bugtracker">https://github.com/bob-ros2/bob_audio/issues</url>

  <author email="bobmeuchelm@gmail.com">Bob Ros</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann-json</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
